bk_ida/gccida/g0/find_reloads_subreg_address
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/reload.c:6218:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/reload.c:6222:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/reload.c:6244:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
offset = ( int)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/reload.c:6262:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)tem + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/reload.c:6270:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( replace_reloads && x != recog_data_0.operand[opnum] ) 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_subreg_address/src/obj/reload.o] Error 1
